--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Airdrop</title>
    <link rel="stylesheet" href="./style.css">
+   <script src="./script.js"></script>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -23,79 +24,201 @@
             <div class="content">
                -----------------------
             </div>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">OPENLOOP (kèo
+            <table class=" table table-hover">
+               <thead>
+                  <tr>
+                     <th>Tên dự án</th>
+                     <th>Phương thức tham gia</th>
+                     <th>Giá đã list</th>
+                  </tr>
+               </thead>
+               <tbody>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">OPENLOOP (kèo
+                           mới):</span></td>
+                     <td><a target="_blank"
+                           href="https://chromewebstore.google.com/detail/openloopso-sentry-node-ex/effapmdildnpkiaeghlkicpfflpiambm"
+                           style="color: rgb(180, 78, 71);"> Extention </a><i>CODE:
+                           ol1ae340af</i></td>
+                     <td>NULL</td>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">KAISAR (kèo mới):</span></td>
+                     <td><a target="_blank" href="https://zero.kaisar.io/register?ref=fbRZnN747"
+                           style="color: rgb(180, 78, 71);">Tại
+                           đây </a><a target="_blank"
+                           href="https://chromewebstore.google.com/detail/kaisar-zeronode/mmlnljdcfjnfeikeioghbkobdcmnhgko"
+                           style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>NULL</td>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">BLESS (kèo mới):</span></td>
+                     <td> <a target="_blank" href="https://bless.network/dashboard?ref=WAKGZ6"
+                           style="color: rgb(180, 78, 71);">Tại
+                           đây
+                        </a><a target="_blank"
+                           href="https://chromewebstore.google.com/detail/bless/pljbjcehnhcnofmkdbjolghdcjnmekia"
+                           style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>NULL</td>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">PIPE GUARDIAN (kèo
+                           mới):</span></td>
+                     <td><a target="_blank" href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
+                           style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
+                           href="https://chromewebstore.google.com/detail/pipe-guardian-node/gelgmmdfajpefjbiaedgjkpekijhkgbe"
+                           style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>NULL</td>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">GRASS:</span></td>
+                     <td><a target="_blank" href="https://app.getgrass.io/register/?referralCode=KQqRz1rnDMxozW6"
+                           style="color: rgb(180, 78, 71);">Tại
+                           đây</a></td>
+                     <td><span id="grass-price">Loading...</span><span>(2$ - 3,8$)</span></p>
+                     </td>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">GADIENT:</span></td>
+                     <td><a target="_blank" href="https://app.gradient.network/signup?code=6TJOPN"
+                           style="color: rgb(180, 78, 71);">Tại
+                           đây</a> <a target="_blank"
+                           href="https://chromewebstore.google.com/detail/gradient-sentry-node/caacbgbklghmpodbdafajbgdnegacfmo"
+                           style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>NULL</td>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">NODEPAY:</span> </td>
+                     <td><a target="_blank" href="https://app.nodepay.ai/register?ref=jsOIOVnTSrHcldS"
+                           style="color: rgb(180, 78, 71);">Tại
+                           đây</a><a target="_blank"
+                           href="https://chromewebstore.google.com/detail/nodepay-extension/lgmpfmgeabnnlemejacfljbmonaomfmm"
+                           style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td style="color: #539100;">SẮP RA MẮT</td>
+                  </tr>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">OASIS AI:</span></td>
+                     <td><a target="_blank" href="https://r.oasis.ai/f560c8ed67ef9de7"
+                           style="color: rgb(180, 78, 71);">Tại
+                           đây</a><a target="_blank"
+                           href="https://chromewebstore.google.com/detail/oasisai/knhbjeinoabfecakfppapfgdhcpnekmm?hl=en"
+                           style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>NULL</td>
+                  </tr>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">BOCKMESH:</span></td>
+                     <td> <a target="_blank"
+                           href="https://app.blockmesh.xyz/register?invite_code=23c275a2-cf65-48f4-af93-b8f48a2c1384"
+                           style="color: rgb(180, 78, 71);">Tại
+                           đây</a><a target="_blank"
+                           href="https://chromewebstore.google.com/detail/blockmesh-network/obfhoiefijlolgdmphcekifedagnkfjp"
+                           style="color: rgb(180, 78, 71);"> Extention </a></td>
+                     <td>NULL</td>
+                  </tr>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">TENEO BETA:</span></td>
+                     <td> <a target="_blank" href="https://teneo.pro/community-node"
+                           style="color: rgb(180, 78, 71);">Tại
+                           đây</a><a target="_blank"
+                           href="https://chromewebstore.google.com/detail/teneo-community-node/emcclcoaglgcpoognfiggmhnhgabppkm?hl=de&authuser=0"
+                           style="color: rgb(180, 78, 71);"> Extention </a> <i>CODE:
+                           CH2GW</i></td>
+                     <td>NULL</td>
+                  </tr>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">DAWN:</span></td>
+                     <td> <a target="_blank"
+                           href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp"
+                           style="color: rgb(180, 78, 71);">Extention </a> <i>CODE:
+                           0dri9idh</i></td>
+                     <td>NULL</td>
+                  </tr>
+                  <tr>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">UPLINK:</span></td>
+                     <td><a target="_blank" href="https://explorer.uplink.xyz/register?referralCode=zFDvW1"
+                           style="color: rgb(180, 78, 71);">Extention
+                        </a></td>
+                     <td>NULL</td>
+                  </tr>
+               </tbody>
+            </table>
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">OPENLOOP (kèo
                   mới):</span> <a target="_blank"
                   href="https://chromewebstore.google.com/detail/openloopso-sentry-node-ex/effapmdildnpkiaeghlkicpfflpiambm"
                   style="color: rgb(180, 78, 71);"> Extention </a><i>CODE:
                   ol1ae340af</i>
 
-            </h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">KAISAR (kèo mới):</span>
+            </h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">KAISAR (kèo mới):</span>
                <a target="_blank" href="https://zero.kaisar.io/register?ref=fbRZnN747"
                   style="color: rgb(180, 78, 71);">Tại
                   đây </a><a target="_blank"
                   href="https://chromewebstore.google.com/detail/kaisar-zeronode/mmlnljdcfjnfeikeioghbkobdcmnhgko"
                   style="color: rgb(180, 78, 71);"> Extention </a>
 
-            </h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">BLESS (kèo mới):</span>
+            </h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">BLESS (kèo mới):</span>
                <a target="_blank" href="https://bless.network/dashboard?ref=WAKGZ6" style="color: rgb(180, 78, 71);">Tại
                   đây
                </a><a target="_blank"
                   href="https://chromewebstore.google.com/detail/bless/pljbjcehnhcnofmkdbjolghdcjnmekia"
                   style="color: rgb(180, 78, 71);"> Extention </a>
 
-            </h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">PIPE GUARDIAN (kèo
+            </h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">PIPE GUARDIAN (kèo
                   mới):</span> <a target="_blank" href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
                   style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
                   href="https://chromewebstore.google.com/detail/pipe-guardian-node/gelgmmdfajpefjbiaedgjkpekijhkgbe"
                   style="color: rgb(180, 78, 71);"> Extention </a>
 
-            </h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">GRASS:</span> <a target="_blank"
+            </h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">GRASS:</span> <a target="_blank"
                   href="https://app.getgrass.io/register/?referralCode=KQqRz1rnDMxozW6"
                   style="color: rgb(180, 78, 71);">Tại
-                  đây</a> </h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">GADIENT:</span> <a target="_blank"
+                  đây</a> </h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">GADIENT:</span> <a target="_blank"
                   href="https://app.gradient.network/signup?code=6TJOPN" style="color: rgb(180, 78, 71);">Tại
                   đây</a> <a target="_blank"
                   href="https://chromewebstore.google.com/detail/gradient-sentry-node/caacbgbklghmpodbdafajbgdnegacfmo"
-                  style="color: rgb(180, 78, 71);"> Extention </a></h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">NODEPAY:</span> <a target="_blank"
+                  style="color: rgb(180, 78, 71);"> Extention </a></h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">NODEPAY:</span> <a target="_blank"
                   href="https://app.nodepay.ai/register?ref=jsOIOVnTSrHcldS" style="color: rgb(180, 78, 71);">Tại
                   đây</a><a target="_blank"
                   href="https://chromewebstore.google.com/detail/nodepay-extension/lgmpfmgeabnnlemejacfljbmonaomfmm"
-                  style="color: rgb(180, 78, 71);"> Extention </a></h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">OASIS AI:</span> <a target="_blank"
+                  style="color: rgb(180, 78, 71);"> Extention </a></h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">OASIS AI:</span> <a target="_blank"
                   href="https://r.oasis.ai/f560c8ed67ef9de7" style="color: rgb(180, 78, 71);">Tại
                   đây</a><a target="_blank"
                   href="https://chromewebstore.google.com/detail/oasisai/knhbjeinoabfecakfppapfgdhcpnekmm?hl=en"
-                  style="color: rgb(180, 78, 71);"> Extention </a></h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">BOCKMESH:</span> <a target="_blank"
+                  style="color: rgb(180, 78, 71);"> Extention </a></h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">BOCKMESH:</span> <a target="_blank"
                   href="https://app.blockmesh.xyz/register?invite_code=23c275a2-cf65-48f4-af93-b8f48a2c1384"
                   style="color: rgb(180, 78, 71);">Tại
                   đây</a><a target="_blank"
                   href="https://chromewebstore.google.com/detail/blockmesh-network/obfhoiefijlolgdmphcekifedagnkfjp"
-                  style="color: rgb(180, 78, 71);"> Extention </a></h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">TENEO BETA:</span> <a target="_blank"
+                  style="color: rgb(180, 78, 71);"> Extention </a></h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">TENEO BETA:</span> <a target="_blank"
                   href="https://teneo.pro/community-node" style="color: rgb(180, 78, 71);">Tại
                   đây</a><a target="_blank"
                   href="https://chromewebstore.google.com/detail/teneo-community-node/emcclcoaglgcpoognfiggmhnhgabppkm?hl=de&authuser=0"
                   style="color: rgb(180, 78, 71);"> Extention </a> <i>CODE:
                   CH2GW</i>
-            </h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">DAWN:</span> <a target="_blank"
+            </h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">DAWN:</span> <a target="_blank"
                   href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp"
                   style="color: rgb(180, 78, 71);">Extention </a> <i>CODE:
                   0dri9idh</i>
 
-            </h4>
-            <h4><span class="star">&#9733;</span><span class="rainbow-text">UPLINK:</span> <a target="_blank"
+            </h4> -->
+            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">UPLINK:</span> <a target="_blank"
                   href="https://explorer.uplink.xyz/register?referralCode=zFDvW1"
                   style="color: rgb(180, 78, 71);">Extention
                </a>
-            </h4>
+            </h4> -->
 
             <div class="content">
                -----------------------
@@ -113,7 +236,10 @@
       </div>
 
    </div>
-
+   <!-- <div>
+      <h2>Bitcoin Price (Real-Time)</h2>
+      <p>Current Price: <span id="coin-price">Loading...</span></p>
+   </div> -->
 
 </body>
 
