--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
          <div class="col-1"></div>
          <header class="col-10">
             <p style="color: green; font-size: 40px; margin-bottom: 0;">Airdop Coin</p>
-            <div style="color: rgb(255, 0, 0);">TREO MÁY</div>
-            <div class="content">
-               -----------------------
+            <div class="menu">
+               <ul class="nav nav-tabs">
+                  <li class=""><a class="nav-link" style="color: white; background-color: green;" href="#">DEPIN</a>
+                  </li>
+                  <li class=""><a class="nav-link" style="color: white;" href="./game_tele.html">GAME TELEGRAM</a></li>
+                  <li class=""><a class="nav-link" style="color: white;" href="#">UPDATING</a></li>
+               </ul>
             </div>
             <table class=" table table-hover">
                <thead>
@@ -35,7 +39,7 @@
                <tbody>
                   <tr>
                      <td><span class="star">&#9733;</span><span class="rainbow-text">OPENLOOP (kèo
-                           mới):</span></td>
+                           mới)</span></td>
                      <td><a target="_blank"
                            href="https://chromewebstore.google.com/detail/openloopso-sentry-node-ex/effapmdildnpkiaeghlkicpfflpiambm"
                            style="color: rgb(180, 78, 71);"> Extention </a><i>CODE:
@@ -43,7 +47,7 @@
                      <td>NULL</td>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">KAISAR (kèo mới):</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">KAISAR (kèo mới)</span></td>
                      <td><a target="_blank" href="https://zero.kaisar.io/register?ref=fbRZnN747"
                            style="color: rgb(180, 78, 71);">Tại
                            đây </a><a target="_blank"
@@ -52,7 +56,7 @@
                      <td>NULL</td>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">BLESS (kèo mới):</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">BLESS (kèo mới)</span></td>
                      <td> <a target="_blank" href="https://bless.network/dashboard?ref=WAKGZ6"
                            style="color: rgb(180, 78, 71);">Tại
                            đây
@@ -63,7 +67,7 @@
                   </tr>
                   <tr>
                      <td><span class="star">&#9733;</span><span class="rainbow-text">PIPE GUARDIAN (kèo
-                           mới):</span></td>
+                           mới)</span></td>
                      <td><a target="_blank" href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
                            style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
                            href="https://chromewebstore.google.com/detail/pipe-guardian-node/gelgmmdfajpefjbiaedgjkpekijhkgbe"
@@ -71,7 +75,7 @@
                      <td>NULL</td>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">GRASS:</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">GRASS</span></td>
                      <td><a target="_blank" href="https://app.getgrass.io/register/?referralCode=KQqRz1rnDMxozW6"
                            style="color: rgb(180, 78, 71);">Tại
                            đây</a></td>
@@ -79,7 +83,7 @@
                      </td>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">GADIENT:</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">GADIENT</span></td>
                      <td><a target="_blank" href="https://app.gradient.network/signup?code=6TJOPN"
                            style="color: rgb(180, 78, 71);">Tại
                            đây</a> <a target="_blank"
@@ -88,7 +92,7 @@
                      <td>NULL</td>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">NODEPAY:</span> </td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">NODEPAY</span> </td>
                      <td><a target="_blank" href="https://app.nodepay.ai/register?ref=jsOIOVnTSrHcldS"
                            style="color: rgb(180, 78, 71);">Tại
                            đây</a><a target="_blank"
@@ -98,7 +102,7 @@
                   </tr>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">OASIS AI:</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">OASIS AI</span></td>
                      <td><a target="_blank" href="https://r.oasis.ai/f560c8ed67ef9de7"
                            style="color: rgb(180, 78, 71);">Tại
                            đây</a><a target="_blank"
@@ -108,7 +112,7 @@
                   </tr>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">BOCKMESH:</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">BOCKMESH</span></td>
                      <td> <a target="_blank"
                            href="https://app.blockmesh.xyz/register?invite_code=23c275a2-cf65-48f4-af93-b8f48a2c1384"
                            style="color: rgb(180, 78, 71);">Tại
@@ -119,7 +123,7 @@
                   </tr>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">TENEO BETA:</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">TENEO BETA</span></td>
                      <td> <a target="_blank" href="https://teneo.pro/community-node"
                            style="color: rgb(180, 78, 71);">Tại
                            đây</a><a target="_blank"
@@ -130,7 +134,7 @@
                   </tr>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">DAWN:</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">DAWN</span></td>
                      <td> <a target="_blank"
                            href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp"
                            style="color: rgb(180, 78, 71);">Extention </a> <i>CODE:
@@ -138,7 +142,7 @@
                      <td>NULL</td>
                   </tr>
                   <tr>
-                     <td><span class="star">&#9733;</span><span class="rainbow-text">UPLINK:</span></td>
+                     <td><span class="star">&#9733;</span><span class="rainbow-text">UPLINK</span></td>
                      <td><a target="_blank" href="https://explorer.uplink.xyz/register?referralCode=zFDvW1"
                            style="color: rgb(180, 78, 71);">Extention
                         </a></td>
@@ -146,91 +150,17 @@
                   </tr>
                </tbody>
             </table>
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">OPENLOOP (kèo
-                  mới):</span> <a target="_blank"
-                  href="https://chromewebstore.google.com/detail/openloopso-sentry-node-ex/effapmdildnpkiaeghlkicpfflpiambm"
-                  style="color: rgb(180, 78, 71);"> Extention </a><i>CODE:
-                  ol1ae340af</i>
-
-            </h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">KAISAR (kèo mới):</span>
-               <a target="_blank" href="https://zero.kaisar.io/register?ref=fbRZnN747"
-                  style="color: rgb(180, 78, 71);">Tại
-                  đây </a><a target="_blank"
-                  href="https://chromewebstore.google.com/detail/kaisar-zeronode/mmlnljdcfjnfeikeioghbkobdcmnhgko"
-                  style="color: rgb(180, 78, 71);"> Extention </a>
-
-            </h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">BLESS (kèo mới):</span>
-               <a target="_blank" href="https://bless.network/dashboard?ref=WAKGZ6" style="color: rgb(180, 78, 71);">Tại
-                  đây
-               </a><a target="_blank"
-                  href="https://chromewebstore.google.com/detail/bless/pljbjcehnhcnofmkdbjolghdcjnmekia"
-                  style="color: rgb(180, 78, 71);"> Extention </a>
-
-            </h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">PIPE GUARDIAN (kèo
-                  mới):</span> <a target="_blank" href="https://pipecdn.app/signup?ref=bmdoaWVtY2"
-                  style="color: rgb(180, 78, 71);">Tại đây </a><a target="_blank"
-                  href="https://chromewebstore.google.com/detail/pipe-guardian-node/gelgmmdfajpefjbiaedgjkpekijhkgbe"
-                  style="color: rgb(180, 78, 71);"> Extention </a>
-
-            </h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">GRASS:</span> <a target="_blank"
-                  href="https://app.getgrass.io/register/?referralCode=KQqRz1rnDMxozW6"
-                  style="color: rgb(180, 78, 71);">Tại
-                  đây</a> </h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">GADIENT:</span> <a target="_blank"
-                  href="https://app.gradient.network/signup?code=6TJOPN" style="color: rgb(180, 78, 71);">Tại
-                  đây</a> <a target="_blank"
-                  href="https://chromewebstore.google.com/detail/gradient-sentry-node/caacbgbklghmpodbdafajbgdnegacfmo"
-                  style="color: rgb(180, 78, 71);"> Extention </a></h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">NODEPAY:</span> <a target="_blank"
-                  href="https://app.nodepay.ai/register?ref=jsOIOVnTSrHcldS" style="color: rgb(180, 78, 71);">Tại
-                  đây</a><a target="_blank"
-                  href="https://chromewebstore.google.com/detail/nodepay-extension/lgmpfmgeabnnlemejacfljbmonaomfmm"
-                  style="color: rgb(180, 78, 71);"> Extention </a></h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">OASIS AI:</span> <a target="_blank"
-                  href="https://r.oasis.ai/f560c8ed67ef9de7" style="color: rgb(180, 78, 71);">Tại
-                  đây</a><a target="_blank"
-                  href="https://chromewebstore.google.com/detail/oasisai/knhbjeinoabfecakfppapfgdhcpnekmm?hl=en"
-                  style="color: rgb(180, 78, 71);"> Extention </a></h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">BOCKMESH:</span> <a target="_blank"
-                  href="https://app.blockmesh.xyz/register?invite_code=23c275a2-cf65-48f4-af93-b8f48a2c1384"
-                  style="color: rgb(180, 78, 71);">Tại
-                  đây</a><a target="_blank"
-                  href="https://chromewebstore.google.com/detail/blockmesh-network/obfhoiefijlolgdmphcekifedagnkfjp"
-                  style="color: rgb(180, 78, 71);"> Extention </a></h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">TENEO BETA:</span> <a target="_blank"
-                  href="https://teneo.pro/community-node" style="color: rgb(180, 78, 71);">Tại
-                  đây</a><a target="_blank"
-                  href="https://chromewebstore.google.com/detail/teneo-community-node/emcclcoaglgcpoognfiggmhnhgabppkm?hl=de&authuser=0"
-                  style="color: rgb(180, 78, 71);"> Extention </a> <i>CODE:
-                  CH2GW</i>
-            </h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">DAWN:</span> <a target="_blank"
-                  href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp"
-                  style="color: rgb(180, 78, 71);">Extention </a> <i>CODE:
-                  0dri9idh</i>
-
-            </h4> -->
-            <!-- <h4><span class="star">&#9733;</span><span class="rainbow-text">UPLINK:</span> <a target="_blank"
-                  href="https://explorer.uplink.xyz/register?referralCode=zFDvW1"
-                  style="color: rgb(180, 78, 71);">Extention
-               </a>
-            </h4> -->
 
             <div class="content">
-               -----------------------
+               <br>
+               <p>Ghi chú: </p>
+               <h5>- Phần "Tại đây" là liên kết tạo tài khoản</h5>
+               <h5>- Phần "Extention" là liên kết tải extention</h5>
+               <h5>- Với những liên kết có phần CODE thì khi tạo tài khoản hãy nhập code vào
+                  phần mã
+                  mời để nhận thêm point</h5>
+               <br>
             </div>
-            <p>Ghi chú: </p>
-            <h5>- Phần "Tại đây" là liên kết tạo tài khoản</h5>
-            <h5>- Phần "Extention" là liên kết tải extention</h5>
-            <h5>- Với những liên kết có phần CODE thì khi tạo tài khoản hãy nhập code vào
-               phần mã
-               mời để nhận thêm point</h5>
-            <br>
-
          </header>
          <div class="col-1"></div>
       </div>
